--- a/src/home/styles.css
+++ b/src/home/styles.css
@@ -1,12 +1,28 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,400;0,900;1,300&display=swap');
 @import "https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma-rtl.min.css";
-@import "node_modules/bulma-responsive-tables/bulma-responsive-tables";
+/* @import "node_modules/bulma-responsive-tables/bulma-responsive-tables"; */
 
 * {
     align-items: center;
 }
+html, body {
+    width: 100%;
+    height: 100%;
+    padding: 0;
+    margin: 0;
+}
 .block:not(:last-child),.box:not(:last-child),.breadcrumb:not(:last-child),.content:not(:last-child),.level:not(:last-child),.message:not(:last-child),.notification:not(:last-child),.pagination:not(:last-child),.progress:not(:last-child),.subtitle:not(:last-child),.table-container:not(:last-child),.table:not(:last-child),.tabs:not(:last-child),.title:not(:last-child) {
     margin-bottom: 1.5rem;
+}
+
+.main-bar {
+    /* display: table; */
+    max-height: 150px;
+    max-width: 1200px;
+    height: 100%;
+    padding: 2rem;
+    width: 100%;
+    border-radius: 30px 30px 0px 30px;
 }
 
 .container {
@@ -22,23 +38,96 @@ aside {
 
 .column {
     display: block;
-    padding: 0.75rem;
+    /* padding: ; */
+    /* padding-inline: 0.75rem; */
     border-radius: 6px;
 }
 
 .box {
-    background-color: white;
+    /* background-color: white; */
     border-radius: 6px;
     display: block;
-    padding: 1.25rem;
+    padding-inline: 1.25rem;
+    /* padding: 10px 10px 10px 10px ; */
     /* text-align: center; */
     align-items: center;
-    height: 100vh;
-    margin: 10px 10px 10px 10px;
+    height: 100vh;    
+    max-width: 1240px;
+    width: 100vw;
+    /* margin: 10px 10px 10px 10px; */
 }
 .container {
-    background-color: #F2F6FA;
+    /* background-color: #F2F6FA; */
     display: flex;
+    
+}
+
+/* .table-container{
+    overflow-y: hidden;    
+    
+    max-height: 700px;
+    max-width: 1200px;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
+
+table {
+    margin-left: auto;
+    margin-right: auto; 
+    table-layout: fixed;
+    width: 100%;
+           
+}
+thead {
+    display: flex;
+    width: 100%;
 
 }
-table tr:hover td{background-color:hsl(48, 100%, 96%);}
+
+*/
+table {
+    width: 100%;
+    border-collapse: collapse;
+    border-radius: 30px 30px 30px 30px;
+}
+
+.table-container {
+    max-height: 500px; /* Đặt chiều cao tối đa của bảng container */
+    height: 100%;
+    /* width: 100vh; */
+    /* flex-direction: column; */ 
+    overflow-y: auto;
+    /* background-color: aqua; */
+}
+
+thead,tbody tr {
+    display: table;
+    width: 100%;
+    table-layout: fixed;
+    vertical-align: middle;
+}
+tbody {
+    height: 80%;
+    z-index: 1;
+}
+thead{
+	position: -webkit-sticky;
+    position: sticky;
+    top: 0;
+    z-index: 2;
+}
+
+th, td {
+    border: 1px solid #ddd;
+    padding: 8px;
+} 
+button {
+	position: relative;
+}
+.hide {
+    display: none;
+}
+
+#tableUser > tr:hover td{background-color:hsl(48, 100%, 96%);}
+#tableBook > tr:hover td{background-color:rgb(224, 238, 130);}
